--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "avukat-sitesi",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,20 +12,24 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "gray-matter": "^4.0.3",
-    "marked": "^15.0.4",
-    "next": "15.1.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "marked": "^5.0.4",
+    "next": "^13.1.2",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@eslint/js": "^9.17.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-config-next": "15.1.2",
-    "eslint-plugin-react": "^7.37.3",
-    "globals": "^15.14.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "@eslint/eslintrc": "^1.4.0",
+    "@eslint/js": "^8.39.0",
+    "@next/eslint-plugin-next": "^15.1.3",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^13.5.8",
+    "eslint-define-config": "^1.4.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "globals": "^13.15.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.2"
   }
 }
