--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,11 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "react/prop-types": "off",
-    "react/react-in-jsx-scope": "off",
-    "no-undef": "off",
-    "no-unused-vars": "warn",
-    "no-unused-expressions": "off"
+    "extends": ["next/core-web-vitals"],
+    "rules": {
+      "react/prop-types": "off",
+      "react/react-in-jsx-scope": "off",
+      "no-undef": "off",
+      "no-unused-vars": "warn",
+      "no-unused-expressions": "off"
+    }
   }
-}
+  
