--- a/package.json
+++ b/package.json
@@ -12,22 +12,25 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "gray-matter": "^4.0.3",
-    "marked": "^5.0.4",
-    "next": "^13.1.2",
+    "marked-highlight": "^2.2.1",
+    "next": "^15.1.3",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^1.4.0",
-    "@eslint/js": "^8.39.0",
+    "@eslint/js": "^9.17.0",
     "@next/eslint-plugin-next": "^15.1.3",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^13.5.8",
+    "eslint-config-next": "^15.1.3",
     "eslint-define-config": "^1.4.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "globals": "^13.15.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.2"
